Issue #59: Wrap around body content

--- a/source_scss/css/style.scss
+++ b/source_scss/css/style.scss
@@ -3,3 +3,18 @@
 body{
   background-color: #f5f5f7;
 }
+
+.main-wrapper {
+    /*
+    The main wrapper for the content of the body of the application.
+    This is used to make sure the footer is always at the bottom of the page.
+    */
+    min-height: 100%;  /* Makes sure the wrapper takes at least the full height of the viewport */
+    display: flex;     /* Utilizing flexbox to stack the content and the footer */
+    flex-direction: column; /* Stacking direction */
+
+  .content-area {
+    flex: 1 0 auto; /* This allows the content to grow and shrink as needed */
+  }
+}
+
